# avcleaner

./: .gitignore  ApiMatchHandler.cpp  ApiMatchHandler.h  CMakeLists.txt  CMakeLists_all_distro.txt  CMakeLists_archlinux.txt  Consumer.h  Dockerfile  Globals.cpp  Globals.h  MatchHandler.cpp  MatchHandler.h  README.md  Utils.cpp  Utils.h  clang-astdump-macos_meterpreter.sh  clang-query-macos.sh  clang-query-macos_meterpreter.sh  clang-query_run_linux.sh  main.cpp  patch_enum_syscalls.c  patch_enum_syscalls.txt  run_example.sh  run_example_private.sh
scripts/: generate_include_directives.py  obfuscate_meterpreter_macos.py
test/: DelayLoadMetSrv.c.patch  base_dispatch.c  base_inject.c  base_inject.c.ast  base_inject.c.patch  kuhl_m_lsadump.c  kuhl_m_lsadump.c.patch  messagebox_simple.c  messagebox_simple.c.patch  mod_system.cpp.patch  remote_dispatch.c.patch  remote_thread.c  simple_test.c  simple_test.c.ast  simple_test.c.patch  string_global_macro.c  string_global_macro.c.patch  strings_simplest.c  strings_simplest.c.patch  strings_test.ast  strings_test.c  strings_test.c.patch
